# minute_maker

./: .env.example  .gitignore  AGENTS.md  INSTALLATION.md  NOTICE.md  README.md  apply-patch.js  download_model.py  main.py  mojiokoshi6.py  mojiokoshi7.py  pyproject.toml  test_oss_whisper.py  video_audio_cutter.py
backend/: requirements.txt
backend/app/: azure_conversation_generation.py  document_parser.py  main.py
backend/app/tests/: test_azure_conversation_sample.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.css  App.tsx  i18n.tsx  index.css
frontend/src/components/: MinuteGenerator.css  MinuteGenerator.tsx  PromptManager.css  PromptManager.tsx  Settings.css  Settings.tsx  SpeakerManager.tsx
